# earnings-reaction-lab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
.github/workflows/: ci.yml
docs/: SETUP.md
notebooks/: 01_event_study.py  02_double_lasso.py  03_causal_forest.py  04_prediction_gbm.py  05_dl_and_text.py  06_findings.py
src/erl/: config.py  fmp.py  pilot.py  pipeline.py  report.py  universe.py  utils.py
src/erl/events/: features.py  panel.py  returns.py
src/erl/harvest/: fundamentals.py  prices.py  surprises.py  transcripts.py
src/erl/inference/: causal_forest.py  double_lasso.py  eventstudy.py
src/erl/predict/: baseline.py  cv.py  gbm.py  tabular_dl.py
src/erl/text/: embed.py  features.py
tests/: test_core.py  test_dl_text.py  test_events.py  test_harvest.py  test_inference.py  test_predict.py  test_universe.py
